[package]
name = "viewport-orientation-gizmo"
description = "A way to display the world's reference frame orientation at all times in the Bevy viewport."
version = "0.2.0"
repository = "https://github.com/dtaralla/viewport-orientation-gizmo"
authors = ["David Taralla <davidtaralla@gmail.com>"]
keywords = ["bevy", "viewport", "gizmo"]
edition = "2021"
license = "MIT"
categories = ["Game development", "Rendering"]

[features]
click-reaction = ["bevy_mod_raycast"]

[dependencies]

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
branch = "main"
features = ["render"]
default-features = false

[dependencies.bevy_mod_raycast]
git = "https://github.com/dtaralla/bevy_mod_raycast"
branch = "support_all_render_targets"
optional = true

[dependencies.bevy_easings]
git = "https://github.com/dtaralla/bevy_easings"
branch = "bevy_main"
optional = true

[dev-dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
branch = "main"
features = ["bevy_winit", "bevy_gltf"]
default-features = false

[target.'cfg(target_os = "linux")'.dev-dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
branch = "main"
features = ["x11", "wayland"]
default-features = false

[dev-dependencies.smooth-bevy-cameras]
git = "https://github.com/dtaralla/smooth-bevy-cameras"
branch = "track_main"

[[example]]
name = "clickable_gizmo"
required-features = ["click-reaction", "bevy_easings"]