[package]
name = "viewport-orientation-gizmo"
description = "A way to display the world's reference frame orientation at all times in the Bevy viewport."
version = "0.3.1"
repository = "https://github.com/dtaralla/viewport-orientation-gizmo"
authors = ["David Taralla <davidtaralla@gmail.com>"]
keywords = ["bevy", "viewport", "gizmo"]
edition = "2021"
license = "MIT"
categories = ["Game development", "Rendering"]

[features]
click-reaction = ["bevy_mod_raycast"]

[dependencies]

[dependencies.bevy]
version = "0.7"
features = ["render"]
default-features = false

[dependencies.bevy_mod_raycast]
version = "0.4.0"
optional = true

[dependencies.bevy_easings]
git = "https://github.com/vleue/bevy_easings"
branch = "dependabot/cargo/bevy-0.7"
optional = true

[dev-dependencies.bevy]
version = "0.7"
features = ["bevy_winit", "bevy_gltf"]
default-features = false

[target.'cfg(target_os = "linux")'.dev-dependencies.bevy]
version = "0.7"
features = ["x11", "wayland"]
default-features = false

[dependencies.smooth-bevy-cameras]
git = "https://github.com/dtaralla/smooth-bevy-cameras"
branch = "allow_pausing_interpolation"
optional = true

[[example]]
name = "clickable_gizmo"
required-features = ["click-reaction", "bevy_easings", "smooth-bevy-cameras"]

[[example]]
name = "clickable_gizmo_with_projection_change"
required-features = ["click-reaction", "bevy_easings", "smooth-bevy-cameras"]

[[example]]
name = "custom_gizmo"
required-features = ["smooth-bevy-cameras"]

[[example]]
name = "flashing_gizmo"
required-features = ["smooth-bevy-cameras"]

[[example]]
name = "flying_camera"
required-features = ["smooth-bevy-cameras"]
